<resources>
    <string name="app_name">NewsX</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="remove">Remove</string>
    <string name="customise_your_experience">Customise your experience</string>
    <string name="content_select_category">It\'s really easy, just select the topics you would like to display on your homepage.</string>
    <string name="continue_button">Continue</string>
    <string name="update_button">Update</string>
    <string name="favourites">Favourites</string>
    <string name="home">Home</string>
    <string name="spotlight">Spotlight</string>
    <string name="recently_viewed">Recently Viewed</string>

    <string-array name="listArray">
        <item>Headings</item>
        <item>Headings and Details</item>
        <item>All Data</item>
    </string-array>

    <string-array name="listValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="key_admob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="key_admob">ca-app-pub-3940256099942544/6300978111</string>

    <string name="key_interstitialAds">ca-app-pub-3940256099942544/1033173712</string>

    <string name="intro.title.01">Welcome to News X</string>
    <string name="intro.subtitle.01">Your ultimate source for all kinds of news </string>
    <string name="intro.title.02">Let\'s try something fun</string>
    <string name="intro.subtitle.02">Magna minim consequat qui non tempor et excepteur officia minim</string>
    <string name="intro.title.03">Beautifully crafted with ❤</string>
    <string name="intro.subtitle.03">Sint labore velit consectetur fugiat Lorem anim sit pariatur qui consequat id.</string>

    <!--Contenful key-->
    <string name="space_key_contenful">68b6suumlbjk</string>
    <string name="access_key_contenful">c8d7c623360c994d8366c59fce1329c93a5dbad6532efc85455b2d0f5669bee9</string>
    <string name="add_tab">+ Add Tab</string>
    <string name="tab">Tab</string>

</resources>
